# hydrolox

./: Cargo.toml  README.md  binds.yaml
.cargo/: config.toml
assets/materials/: slate_gray.yaml
src/: comp_data.rs  framework.rs  game.rs  geometry.rs  input.rs  main.rs  physics.rs  render.rs  timer.rs
src/shader/: defer_fs.glsl  defer_vs.glsl  fore_fs.glsl  fore_vs.glsl  ui_fs.glsl  ui_vs.glsl
