[package]
name = "hydrolox"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4.22"
hydrolox-pga3d = { git = "https://github.com/aedank0/hydrolox-pga3d.git" }
smallvec = { version = "1.13.2", features = ["const_generics", "const_new", "serde"] }
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
vulkano-util = "0.34.1"
winit = { version = "0.30.5", features = ["rwh_05"] }
