[package]
name = "hydrolox"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
hydrolox-log = { git = "https://github.com/aedank0/hydrolox-log.git"}
log = "0.4"
hydrolox-pga3d = { git = "https://github.com/aedank0/hydrolox-pga3d.git", features = ["serde", "bytemuck"]}
smallvec = { version = "1.0", features = ["const_generics", "const_new", "serde"] }
vulkano = "0.35"
vulkano-shaders = { version = "0.35", features = ["shaderc-debug"] }
vulkano-util = "0.35"
winit = { version = "0.30", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
tobj = "4.0"
clap = { version = "4.5.29", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = "fat"

# Release w/ debug info
# Useful for profiling
[profile.release-dev]
inherits = "release"
debug = true
strip = "none"

